feat: add flask of wondrous physick

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -1,129 +1,20 @@
 {
-  "difficulty": {
-    "1": "Easy",
-    "2": "Medium",
-    "3": "Hard",
-    "4": "Expert",
-    "name": "Difficulty",
-    "help": "Select a difficulty for your challenge."
-  },
-  "class": {
-    "1": "Astrologer",
-    "2": "Bandit",
-    "3": "Confessor",
-    "4": "Hero",
-    "5": "Prisoner",
-    "6": "Prophet",
-    "7": "Samurai",
-    "8": "Vagabond",
-    "9": "Warrior",
-    "10": "Wretch"
-  },
-  "keepsake": {
-    "1": "None",
-    "2": "Crimson Amber Medallion",
-    "3": "Lands Between Rune",
-    "4": "Golden Seed",
-    "5": "Fanged Imp Ashes",
-    "6": "Cracked Pot",
-    "7": "Stonesword Key",
-    "8": "Bewitching Branch",
-    "9": "Boiled Prawn",
-    "10": "Shabriri's Woe"
-  },
-  "constraint": {
-    "1": "Don't upgrade flasks",
-    "2": "Don't add flasks",
-    "3": "Don't use ash of war",
-    "4": "Don't use summons",
-    "5": "Don't use magic",
-    "6": "Don't level up",
-    "7": "Don't upgrade your weapons",
-    "8": "Don't use pots",
-    "9": "Don't use perfumes",
-    "10": "Don't use greases",
-    "11": "Don't use objects (except Torrent ring and Flasks)",
-    "12": "Don't be hit",
-    "13": "Don't die",
-    "14": "Don't use Torrent in combat",
-    "15": "Don't buy the craft necessary from Kalé",
-    "16": "Don't use bleeding",
-    "17": "Don't use frost",
-    "18": "Kill all 7 demi gods",
-    "19": "Get age of duskborn ending",
-    "20": "Get age of fracture ending",
-    "21": "Get age of order ending",
-    "22": "Get age of the Stars ending",
-    "23": "Get blessing of despair ending",
-    "24": "Get lord of the frenzied flame ending",
-    "25": "Armor pieces must match",
-    "26": "Must have fast roll",
-    "27": "Must have mid roll",
-    "28": "Must have fat roll",
-    "29": "Don't use armor",
-    "30": "Don't heal",
-    "31": "Don't use talismans",
-    "32": "Use three talismans at best",
-    "33": "Use two talismans at best",
-    "34": "Use one talisman at best",
-    "35": "Don't upgrade summons",
-    "36": "Don't use elite summons",
-    "37": "Don't restore PC",
-    "38": "Keep starting armor",
-    "39": "Can't pick up maps fragments"
-  },
-  "weaponTypes": {
-    "1": "Axes",
-    "2": "Ballistae",
-    "3": "Bows",
-    "4": "Claws",
-    "5": "Colossal Swords",
-    "6": "Colossal Weapons",
-    "7": "Crossbows",
-    "8": "Curved Greatswords",
-    "9": "Curved Swords",
-    "10": "Daggers",
-    "11": "Fists",
-    "12": "Flails",
-    "13": "Glintstone Staffs",
-    "14": "Greataxes",
-    "15": "Greatbows",
-    "16": "Greatswords",
-    "17": "Great Hammers",
-    "18": "Great Spears",
-    "19": "Halberds",
-    "20": "Hammers",
-    "21": "Heavy Thrusting Swords",
-    "22": "Katanas",
-    "23": "Light Bows",
-    "24": "Reapers",
-    "25": "Sacred Seals",
-    "26": "Spears",
-    "27": "Straight Swords",
-    "28": "Thrusting Swords",
-    "29": "Torches",
-    "30": "Twinblades",
-    "31":"Whips"
-  },
   "challenge": {
     "title": "Your challenge",
     "class": "Starting Class",
     "keepsake": "Keepsake",
+    "crystalTears": "Flask of Wondrous Physick",
     "constraints": "Constraints",
     "weaponTypes": "Allowed weapon types",
     "leftHand": "Left Hand",
     "rightHand": "Right Hand",
     "waiting": "Please generate a challenge first."
   },
-  "welcome":  "Welcome Tarnished. \n Looking for more challenge with Elden Ring but don't know what to do ? You're in good hands.",
+  "welcome": "Welcome Tarnished. \n Looking for more challenge with Elden Ring but don't know what to do ? You're in good hands.",
   "generate": "Generate",
   "or": "OR",
   "searchPlaceholder": "Search a challenge",
   "search": "Search",
   "tooltipSave": "Save the challenge",
-  "savedChallenges": "Saved challenges",
-  "errors": {
-    "too many challenges": "Too many challenges saved (3 max)",
-    "invalid id": "Invalid challenge ID"
-  }
+  "savedChallenges": "Saved challenges"
 }
